# Quadcopter

./: .gitignore  CMakeLists.txt  README.md  init.bat  main.gen
inc/: BaseBand.h  IRadio.h  PI.h  bmi270.h  buffered_button.h  esc.h  globals.h  init.h  keys.h  recieve.h  struct_aliases.h  time_funcs.h  transmit.h  utils.h
inc/RF/: A7125Radio.h  A7125RadioData.h  A7196Radio.h  A7196RadioData.h  BaseBand.h  FEC_CRC.h  GinsengPAControl.h  HW_BBU.h  IPAControl.h  IWirelessPacket.h  NoneRadio.h  RT569Dig4MFPGA.h  RT569DigFPGA.h  RT569Radio.h  RadioSelect.h  SaffronPAControl.h  SagePAControl.h  WInStream.h  WOutStream.h  WirelessConsts.h
scripts/: build.bat  setConfig.py
src/: Receive.cpp  Transmit.cpp  main.c  main.cpp  pi_test.cpp
